<resources>
    <string name="app_name">TeachersPet</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="item_place_holder_lesson_plan_text">Lesson Plan</string>


    <!--> Login !-->

    <string name="login_card_header_login">Login</string>
    <string name="login_form_hint_email_address">Email</string>
    <string name="login_form_hint_password">Password</string>
    <string name="login_label_forgot_password">Forgot Password?</string>
    <string name="register_button_text">Register</string>
    <string name="login_label_account_text">Dont have an account ?</string>



    <!--> Register !-->
    <string name="register_header_text">Register</string>
    <string name="register_hint_text_first_name">First Name</string>
    <string name="register_hint_text_last_name">Last Name</string>
    <string name="register_hint_text_email_address">Email Address</string>
    <string name="register_hint_text_password">Password</string>



    <!--> Forgot Password !-->
    <string name="forgot_header_text">Forgot Password</string>
    <string name="fragment_forgot_password">Forgot Password</string>
    <string name="fragment_login">Login</string>
    <string name="fragment_register">Register</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_activity_main2">MainActivity</string>

</resources>