<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.leaf.teacherspet.ui.login.view.LoginFragment"
        android:label="@string/fragment_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_loginFragment_to_forgotPasswordFragment2"
            app:destination="@id/forgotPasswordFragment" />
        <action
            android:id="@+id/action_loginFragment_to_dashboardFragment"
            app:destination="@id/navigation_dashboard" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.leaf.teacherspet.ui.register.view.RegisterFragment"
        android:label="@string/fragment_register"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/forgotPasswordFragment"
        android:name="com.leaf.teacherspet.ui.forgot.view.ForgotPasswordFragment"
        android:label="@string/forgot_header_text"
        tools:layout="@layout/fragment_forgot_password" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.leaf.teacherspet.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.leaf.teacherspet.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.leaf.teacherspet.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
</navigation>