<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/coral"
    tools:context=".ui.register.view.RegisterFragment">


<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="@dimen/login_card_margin"-->
<!--        android:fontFamily="@font/roboto_black"-->
<!--        android:padding="@dimen/register_header_padding"-->
<!--        android:text="@string/register_header_text"-->
<!--        android:textAlignment="center"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="@dimen/text_size_large"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.050000012" />-->


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_card_margin"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32999998">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_name"
            style="@style/RegisterTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_margin_bottom"
            android:hint="@string/register_hint_text_first_name"
            app:endIconMode="clear_text"
            app:endIconTint="@color/white"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/last_name"
            style="@style/RegisterTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_margin_bottom"
            android:hint="@string/register_hint_text_last_name"
            app:endIconMode="clear_text"
            app:endIconTint="@color/white"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_address"
            style="@style/RegisterTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_margin_bottom"
            android:hint="@string/register_hint_text_email_address"
            app:endIconMode="clear_text"
            app:endIconTint="@color/white"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/RegisterTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_margin_bottom"
            android:hint="@string/register_hint_text_password"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        style="@style/OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/form_margin_start"
        android:layout_marginTop="@dimen/form_margin_top"
        android:layout_marginEnd="@dimen/form_margin_end"
        android:layout_marginBottom="@dimen/form_margin_bottom"
        android:text="@string/register_button_text"
        app:strokeColor="@color/white"
        android:textColor="@color/white"
        app:rippleColor="@color/orange_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>