<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.view.LoginFragment">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_layout_coral_height"
        android:background="@color/coral"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:layout_width="@dimen/image_logo_width"
            android:layout_height="@dimen/image_logo_height"
            android:layout_gravity="center"
            android:layout_margin="@dimen/image_layout_margin"
            tools:src="@tools:sample/avatars" />


    </LinearLayout>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/login_card_margin"
        app:cardElevation="@dimen/login_card_elevation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="@dimen/login_card_stroke_width"
        tools:layout_editor_absoluteX="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/login_card_layout_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/login_header_margin_top"
                    android:layout_marginBottom="@dimen/login_margin_bottom"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/login_card_header_login"
                    android:textAlignment="center"
                    android:textColor="@color/coral"
                    android:textSize="@dimen/text_size_large" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/form_input_layout_margin_bottom"
                    android:hint="@string/login_form_hint_email_address"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_input_layout_margin_top"
                    android:hint="@string/login_form_hint_password"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/lbl_forgot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/form_margin_start"
                    android:layout_marginTop="@dimen/form_margin_top"
                    android:layout_marginEnd="@dimen/form_margin_end"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/login_label_forgot_password"
                    android:textAlignment="center"
                    android:textColor="@color/dark_orange"
                    android:textSize="@dimen/text_size_small" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="16dp"
                android:orientation="vertical">


                <ImageButton
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/coral"
                    android:elevation="@dimen/login_image_button_elevation"
                    android:padding="@dimen/login_image_button_padding"
                    android:src="@drawable/ic_baseline_arrow_forward_24"
                    android:tint="@color/white" />


            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/form_margin_start"
        android:layout_marginEnd="@dimen/form_margin_end"
        android:fontFamily="@font/roboto_regular"
        android:padding="@dimen/label_account_padding"
        android:text="@string/login_label_account_text"
        android:textAlignment="center"
        android:textColor="@color/burnt_orange"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        style="@style/OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/form_margin_start"
        android:layout_marginTop="@dimen/form_margin_top"
        android:layout_marginEnd="@dimen/form_margin_end"
        android:layout_marginBottom="@dimen/form_margin_bottom"
        android:text="@string/register_button_text"
        android:textColor="@color/burnt_orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:rippleColor="@color/orange_red" />


</androidx.constraintlayout.widget.ConstraintLayout>